# KU-courses

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  7  CONTRIBUTING.md  IO.md  LICENSE  Pipfile  README.md  TODO.md  docker-compose.yml  docker_export_script.sh  docker_import_script.sh  flake.nix  package-lock.json  setup.md
.github/workflows/: deploy.yml  docker-ci.yml  frontend-ci.yml  insights.yml  rust-ci.yml
.lsp/.cache/: db.transit.json
backend/: pairs  parsing.py  scraper.py
backend/course-parser/: Cargo.toml  lint  lint.sh
backend/course-parser/src/: main.rs
backend/courses/: Dockerfile  Pipfile  main.py  parsing.py  requirements.txt  scraper.py  test_parser.py
backend/courses/test_data/: LFKB10272U.json
backend/db-manager/: .gitignore  CHANGELOG.md  Dockerfile  README.md  employed.json  project.clj
backend/db-manager/doc/: intro.md
backend/db-manager/resources/: NNEB18000U.json  extensions.sql  nuke.sql  schema.sql  types.sql
backend/db-manager/src/: db.clj
backend/db-manager/src/course-scraper/: watcher.clj
backend/db-manager/src/course_scraper/: upsert.clj  watcher.clj
backend/db-manager/src/db_manager/: cache.clj  cli.clj  core.clj  db.clj  querier.clj  routes.clj
backend/db-manager/src/exam_scraper/: core.clj
backend/db-manager/src/schema/: schema.sql
backend/db-manager/src/statistics/: core.clj  utils.clj
backend/db-manager/test/db_manager/: core_test.clj
backend/employed/: .gitignore  Pipfile  README.md  main.py  scraper.py
backend/old_rust/course-parser/: Cargo.toml
backend/old_rust/course-parser/src/: parser.rs
backend/old_rust/storage_manager/: lint
backend/python-server/: .env  Dockerfile  README.md  main.py
backend/rust/course-parser/: Cargo.toml  log.txt
backend/rust/course-parser/src/: main.rs  parser.rs
backend/rust/course-parser/src/parser/: course_info.rs  course_info_parser.rs  logistic_info.rs
backend/rust/course-parser/test_data/pages/: LSLS10061U.html  NDAB15009U.html  NDAB22007U.html  NFYK13004U.html  SMIM22001U.html  SMOA09001U.html
backend/rust/storage_manager/: Cargo.toml  lint.sh
backend/rust/storage_manager/src/: lib.rs
backend/rust_parser/: Cargo.toml  Dockerfile
backend/rust_parser/src/: :w  main.rs  parser.rs
backend/rust_parser/src/parser/: content_serialiser.rs  course_information.rs  exam_information.rs  logistic_information.rs  workload_information.rs
backend/rust_parser/test_data/pages/: LSLS10156U.html  NBIK15000U.html  SASK20004U.html
backend/statistics/: CHANGELOG.md  README.md  Winter-2022  project.clj
backend/statistics/doc/: intro.md
backend/statistics/src/statistics/: core.clj  utils.clj
backend/statistics/test/statistics/: core_test.clj
backend/vdb/: Pipfile  test.py
backend/vector_store/: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
backend/vector_store/.sqlx/: query-07ff355f2f2a14bf0a163f3cb6450f57baa285962f0e9fefe0c8d6a5084e7d0a.json  query-1bac47c3b9f3a187ee440c83f2c22106f0bfdb8d7865eec2d49a0585da7b21ca.json  query-63012c5ed8ef1bd8c3c931294767c96a5eae22e960264ab1a6b4b9e957c3c20c.json  query-65f1c255cf0c5df5476c730aea2a9448783ca002a83452a3f245a82b79371652.json  query-7060a1b2757a7c942deadc8b86ccc6ea26bbfb5e24db6dfbdea16ebb88c79319.json  query-b67fb1612df114fa58878cc079a5c912765be487fb0d98985d68e6f2dcf4f885.json  query-e1166c8c3bde787b1b07787d9a30ec58575597e8223d57d8d02e43944b7d5cae.json
backend/vector_store/benches/: ort.rs
backend/vector_store/migrations/: 0001_initial.sql
backend/vector_store/src/: db.rs  embedding.rs  main.rs  populate.rs
backend/vector_store/vdb/: .gitignore  Cargo.toml  result-lib
backend/vector_store/vdb/src/: main.rs
frontend/: .prettierrc.json  Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettierrc.json  svelte.config.js  tailwind.config.js  todos.md
frontend/src/: app.css  app.html  course.ts  newStore.ts  stores.js  stores.ts  theme.js  theme.ts
frontend/src/assets/: CloseCross.svelte  Dk.svelte  Facebook.svelte  Gb.svelte  Github.svelte  Logo.svelte  MenuIcon.svelte  SearchIcon.svelte
frontend/src/components/: Analytics.svelte  BigCheckbox.svelte  Changelog.svelte  CheckboxMenu.svelte  SideCard.svelte  TextSearch.svelte
frontend/src/components/Changelog/: ChangelogButton.svelte  ChangelogModal.svelte  store.ts
frontend/src/components/DbConnectionTester/: DbConnectionTester.svelte
frontend/src/components/FilterButton/: FilterButton.svelte
frontend/src/components/FilterDialog/: FilterDialog.svelte
frontend/src/components/Footer/: Footer.svelte
frontend/src/components/GradeGraph/: GradeGraph.svelte  sample.json
frontend/src/components/GraphComponent/: GraphComponent.svelte
frontend/src/components/Loader/: Loader.svelte
frontend/src/mocking/: LNAK10066U.json  LOJK10248U.json  NBIB16001U.json  NBIK15007U.json  NFYB18000U.json  NFYK15003U.json  NFYK23009U.json  NGEA09002U.json  NIFK14027U.json  NIFK17002U.json  NIGB15009U.json  NIGB15038U.json  NIGK14009U.json  NKEA06015U.json  NKEB20005U.json  NKEB23002U.json  NMAA05069U.json  NMAA05070U.json  NMAB16001U.json  NMAB22005U.json  NMAK16007U.json  NMAK18005U.json  NMAK23006U.json  NNEB18003U.json  NPLK14004U.json  overview.json
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: robots.txt
queries/: courses_pr_employee.sql  nuke.sql  overview_query.sql  schema.sql  test.sql  types.sql
scraper/: Pipfile  main.py  parsing.py  scraper.ipynb
to_be_deleted_backend/: Dockerfile  go.mod  go.sum  main.go
(+13 files in other folders)
