[package]
name = "vector_store"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acap = "0.3.0"
anyhow = "1.0.77"
axum = "0.7.3"
bincode = "1.3.3"
criterion = "0.5.1"
#fastembed = {version = "3"}
fastembed = { git = "https://github.com/joshniemela/fastembed-rs" }
nanohtml2text = "0.1.4"
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
rayon = "1.8.0"
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = "0.15.0"
tokio = {version = "1.32.0", features = ["full"]}

[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"
#debug=true


[[bench]]
name = "ort"
harness = false
