[package]
name = "vector_store"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acap = "0.3.0"
anyhow = "1.0.77"
axum = "0.7.3"
bincode = "1.3.3"
criterion = "0.5.1"
fastembed = "4.9.1"
nanohtml2text = "0.1.4"
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
rayon = "1.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = "0.15.0"
tokio = {version = "1.32.0", features = ["full"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "json", "time"] }
openssl = { version = "0.10.64", features = ["vendored"] }
pgvector = { version = "0.3", features = ["sqlx"] }
lazy_static = "1.5.0"
async-stream = "0.3.5"
futures-util = "0.3.30"
futures-core = "0.3.30"
#lto = "fat"
#codegen-units = 1
#panic = "abort"
#debug=true
