[tool.poetry]
name = "python-dev-flake"
version = "0.1.0"
description = ""
authors = ["Thiago Franco de Moraes <totonixsame@gmail.com>", "Josh Niemelä <josh@jniemela.dk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Cython = "^3.0.4"
Pillow = "^10.0.0"
PyPubSub = "^4.0.3"
h5py = "^3.10.0"
imageio = "^2.31.6"
nibabel = "^5.0.1"
numpy = "^1.26.1"
psutil = "^5.9.4"
pyserial = "^3.5"
python-gdcm = "^3.0.22"
scikit-image = "^0.20.0"
scipy = "^1.11.3"
vtk = "^9.2.6"
torch = "2.1.1"
pyacvd = "^0.2.9"
nvidia-cuda-nvrtc-cu12 = {version="12.1.105",  platform = "Linux"}
nvidia-cuda-runtime-cu12 = {version="12.1.105",  platform = "Linux"}
nvidia-cuda-cupti-cu12 = {version="12.1.105",  platform = "Linux"}
nvidia-cudnn-cu12 = {version="8.9.2.26",  platform = "Linux"}
nvidia-cublas-cu12 = {version="12.1.3.1",  platform = "Linux"}
nvidia-cufft-cu12 = {version="11.0.2.54",  platform = "Linux"}
nvidia-curand-cu12 = {version="10.3.2.106",  platform = "Linux"}
nvidia-cusolver-cu12 = {version="11.4.5.107",  platform = "Linux"}
nvidia-cusparse-cu12 = {version="12.1.0.106",  platform = "Linux"}
nvidia-nccl-cu12 = {version="2.18.1",  platform = "Linux"}
nvidia-nvtx-cu12 = {version="12.1.105",  platform = "Linux"}
triton = { version = "2.1.0", platform = 'linux' }
pynetdicom = "^2.0.2"
torchvision = "^0.16.1"
ultralytics = "^8.0.212"
scikit-learn = "^1.3.2"
transformers = "^4.36.2"
onnx = "^1.15.0"
onnxscript = "^0.1.0.dev20231226"
onnxruntime = "^1.16.3"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
