[package]
name = "course-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.7.7"
storage_manager = { path = "../storage_manager" }
eyre = "0.6.8"
clap = {version = "4.3.23", features = ["derive"]}
